--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,337 @@
-/* место для вашего кода */
+.header,
+.main,
+.footer {
+  font-family: Raleway;
+  font-weight: normal;
+  font-display: swap;
+}
+
+/*------------------------------------------------*/
+
+.header {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  justify-content: space-between;
+  align-items: center;
+  gap: 35px;
+
+  padding: 92px 49px 96px 50px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  padding: 44px 0 39px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.1em;
+  letter-spacing: 0.008em;
+  list-style: circle;
+}
+
+.header__link {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3.5px;
+  text-wrap: nowrap;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  align-self: center;
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  justify-self: right;
+  align-self: flex-end;
+  padding-right: 34px;
+  font-style: normal;
+  line-height: 24.5px;
+  letter-spacing: 0.075em;
+}
+
+.address a {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3.5px;
+  text-wrap: nowrap;
+}
+
+/*------------------------------------------------*/
+
+.cover {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 136px;
+  padding: 166px 50px 51px;
+  color: #ffffff;
+
+  text-transform: uppercase;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 115px;
+  letter-spacing: 0.3em;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  display: block;
+  align-self: center;
+}
+
+.aligned-text_right {
+  display: block;
+  align-self: flex-end;
+  line-height: 100px;
+}
+
+.letter-spacing-extended {
+  display: inline-block;
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cover__description-text {
+  padding-left: 28px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.27em;
+  word-spacing: 0.85em;
+}
+
+.bet-button {
+  border: 1px solid #ffffff;
+  padding: 12px 32px 11px 31px;
+  color: #ffffff;
+
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+/*------------------------------------------------*/
+
+.lots {
+  padding: 179px 24px 146px;
+}
+
+.lots__heading {
+  padding-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  padding: 27px 0 30px;
+
+  color: #ffffff;
+  list-style: none;
+}
+
+.card {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+  width: 334px;
+  min-height: 563px;
+  padding: 51px 40px 48px;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 120%;
+  text-decoration: underline;
+  text-decoration-thickness: 1.1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  margin-top: -2px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  text-decoration: underline;
+  text-decoration-thickness: 1.1px;
+  text-underline-offset: 5px;
+}
+
+/*------------------------------------------------*/
+
+.about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  column-gap: 24px;
+  padding: 38px 24px 0;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  padding: 63px 46px;
+  background-color: #000000;
+}
+
+.about__column {
+  justify-self: center;
+  align-self: start;
+}
+
+.about__title {
+  padding: 101px 0 75px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  padding-top: 24px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  /* or 120% */
+  letter-spacing: 0.005em;
+}
+
+/*------------------------------------------------*/
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 180px 50px 88px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-list {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  list-style: none;
+}
+
+.footer__menu-link {
+  border-bottom: 1px solid black;
+  text-decoration: none;
+  text-wrap: nowrap;
+}
+
+.footer__menu-link_active {
+  border-bottom: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-link {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
+
+.footer__social-icon {
+  max-width: 100%;
+  max-height: 100%;
+}
