--- a/styles/style.css
+++ b/styles/style.css
@@ -147,7 +147,7 @@
   padding: 12px 32px 11px 31px;
   color: #ffffff;
 
-  font-family: inherit, 'Arial', sans-serif;
+  font-family: Raleway, 'Arial', sans-serif;
 
   font-weight: 500;
   font-size: 22px;
